metadata/objects/graxcontactindex__x.object
<CustomObject>
    <description>graxcontactindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxcontactindex</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>AccountId</description>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>AccountId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId_grax_xf_account__c</fullName>
        <description>AccountId_grax_xf_account</description>
        <externalDeveloperName>AccountId_grax_xf_account</externalDeveloperName>
        <label>AccountId_grax_xf_account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>AccountName</description>
        <externalDeveloperName>AccountName</externalDeveloperName>
        <label>AccountName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account_Name</description>
        <externalDeveloperName>Account_Name</externalDeveloperName>
        <label>Account_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveLiveAgentUser_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ActiveLiveAgentUser__c</description>
        <externalDeveloperName>ActiveLiveAgentUser__c</externalDeveloperName>
        <label>ActiveLiveAgentUser__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator_c__c</fullName>
        <description>Activity_Indicator__c</description>
        <externalDeveloperName>Activity_Indicator__c</externalDeveloperName>
        <label>Activity_Indicator__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator_partner_c__c</fullName>
        <description>Activity_Indicator_partner__c</description>
        <externalDeveloperName>Activity_Indicator_partner__c</externalDeveloperName>
        <label>Activity_Indicator_partner__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantName__c</fullName>
        <description>AssistantName</description>
        <externalDeveloperName>AssistantName</externalDeveloperName>
        <label>AssistantName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantPhone__c</fullName>
        <description>AssistantPhone</description>
        <externalDeveloperName>AssistantPhone</externalDeveloperName>
        <label>AssistantPhone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>Birthdate</description>
        <externalDeveloperName>Birthdate</externalDeveloperName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CanAllowPortalSelfReg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CanAllowPortalSelfReg</description>
        <externalDeveloperName>CanAllowPortalSelfReg</externalDeveloperName>
        <label>CanAllowPortalSelfReg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Level_c__c</fullName>
        <description>Certification_Level__c</description>
        <externalDeveloperName>Certification_Level__c</externalDeveloperName>
        <label>Certification_Level__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanStatus__c</fullName>
        <description>CleanStatus</description>
        <externalDeveloperName>CleanStatus</externalDeveloperName>
        <label>CleanStatus</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <description>ConnectionReceivedId</description>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>ConnectionReceivedId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <description>ConnectionSentId</description>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>ConnectionSentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Location_c__c</fullName>
        <description>Contact_Location__c</description>
        <externalDeveloperName>Contact_Location__c</externalDeveloperName>
        <label>Contact_Location__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_Name__c</fullName>
        <description>CreatedBy_Name</description>
        <externalDeveloperName>CreatedBy_Name</externalDeveloperName>
        <label>CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Custom_Contact_Date_c__c</fullName>
        <description>Custom_Contact_Date__c</description>
        <externalDeveloperName>Custom_Contact_Date__c</externalDeveloperName>
        <label>Custom_Contact_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity_c_GRAX_float__c</fullName>
        <description>Days_Since_Last_Activity__c_GRAX_float</description>
        <externalDeveloperName>Days_Since_Last_Activity__c_GRAX_float</externalDeveloperName>
        <label>Days_Since_Last_Activity__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity_c__c</fullName>
        <description>Days_Since_Last_Activity__c</description>
        <externalDeveloperName>Days_Since_Last_Activity__c</externalDeveloperName>
        <label>Days_Since_Last_Activity__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department</description>
        <externalDeveloperName>Department</externalDeveloperName>
        <label>Department</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotCall_GRAX_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DoNotCall_GRAX_boolean</description>
        <externalDeveloperName>DoNotCall_GRAX_boolean</externalDeveloperName>
        <label>DoNotCall_GRAX_boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <description>DoNotCall</description>
        <externalDeveloperName>DoNotCall</externalDeveloperName>
        <label>DoNotCall</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_DB_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EDY_ORGCUSTOM__DB__c</description>
        <externalDeveloperName>EDY_ORGCUSTOM__DB__c</externalDeveloperName>
        <label>EDY_ORGCUSTOM__DB__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_Old_Title_c__c</fullName>
        <description>EDY_ORGCUSTOM__Old_Title__c</description>
        <externalDeveloperName>EDY_ORGCUSTOM__Old_Title__c</externalDeveloperName>
        <label>EDY_ORGCUSTOM__Old_Title__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <description>EmailBouncedDate</description>
        <externalDeveloperName>EmailBouncedDate</externalDeveloperName>
        <label>EmailBouncedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <description>EmailBouncedReason</description>
        <externalDeveloperName>EmailBouncedReason</externalDeveloperName>
        <label>EmailBouncedReason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <description>External_ID__c</description>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Id_for_Identity_c__c</fullName>
        <description>FB_Id_for_Identity__c</description>
        <externalDeveloperName>FB_Id_for_Identity__c</externalDeveloperName>
        <label>FB_Id_for_Identity__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Persona_ID_c__c</fullName>
        <description>Facebook_Persona_ID__c</description>
        <externalDeveloperName>Facebook_Persona_ID__c</externalDeveloperName>
        <label>Facebook_Persona_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Picture_c__c</fullName>
        <description>Facebook_Picture__c</description>
        <externalDeveloperName>Facebook_Picture__c</externalDeveloperName>
        <label>Facebook_Picture__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Profile_Picture_c__c</fullName>
        <description>Facebook_Profile_Picture__c</description>
        <externalDeveloperName>Facebook_Profile_Picture__c</externalDeveloperName>
        <label>Facebook_Profile_Picture__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>FirstName</description>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>FirstName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Key__c</fullName>
        <description>GRAX_Execution_Unique_Key</description>
        <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
        <label>GRAX_Execution_Unique_Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Keys__c</fullName>
        <description>GRAX_Execution_Unique_Keys</description>
        <externalDeveloperName>GRAX_Execution_Unique_Keys</externalDeveloperName>
        <label>GRAX_Execution_Unique_Keys</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Version__c</fullName>
        <description>GRAX_Version</description>
        <externalDeveloperName>GRAX_Version</externalDeveloperName>
        <label>GRAX_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grax_Restore_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grax_Restore__c</description>
        <externalDeveloperName>Grax_Restore__c</externalDeveloperName>
        <label>Grax_Restore__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail_GRAX_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HasOptedOutOfEmail_GRAX_boolean</description>
        <externalDeveloperName>HasOptedOutOfEmail_GRAX_boolean</externalDeveloperName>
        <label>HasOptedOutOfEmail_GRAX_boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <description>HasOptedOutOfEmail</description>
        <externalDeveloperName>HasOptedOutOfEmail</externalDeveloperName>
        <label>HasOptedOutOfEmail</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax_GRAX_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HasOptedOutOfFax_GRAX_boolean</description>
        <externalDeveloperName>HasOptedOutOfFax_GRAX_boolean</externalDeveloperName>
        <label>HasOptedOutOfFax_GRAX_boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax__c</fullName>
        <description>HasOptedOutOfFax</description>
        <externalDeveloperName>HasOptedOutOfFax</externalDeveloperName>
        <label>HasOptedOutOfFax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <description>HomePhone</description>
        <externalDeveloperName>HomePhone</externalDeveloperName>
        <label>HomePhone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualId__c</fullName>
        <description>IndividualId</description>
        <externalDeveloperName>IndividualId</externalDeveloperName>
        <label>IndividualId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmailBounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsEmailBounced</description>
        <externalDeveloperName>IsEmailBounced</externalDeveloperName>
        <label>IsEmailBounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsLocked</description>
        <externalDeveloperName>IsLocked</externalDeveloperName>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsPersonAccount</description>
        <externalDeveloperName>IsPersonAccount</externalDeveloperName>
        <label>IsPersonAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawContactId__c</fullName>
        <description>JigsawContactId</description>
        <externalDeveloperName>JigsawContactId</externalDeveloperName>
        <label>JigsawContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <description>Jigsaw</description>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Jigsaw</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Klout_Score_c_GRAX_float__c</fullName>
        <description>Klout_Score__c_GRAX_float</description>
        <externalDeveloperName>Klout_Score__c_GRAX_float</externalDeveloperName>
        <label>Klout_Score__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klout_Score_c__c</fullName>
        <description>Klout_Score__c</description>
        <externalDeveloperName>Klout_Score__c</externalDeveloperName>
        <label>Klout_Score__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages_c__c</fullName>
        <description>Languages__c</description>
        <externalDeveloperName>Languages__c</externalDeveloperName>
        <label>Languages__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <description>LastActivityDate</description>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>LastActivityDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCURequestDate__c</fullName>
        <description>LastCURequestDate</description>
        <externalDeveloperName>LastCURequestDate</externalDeveloperName>
        <label>LastCURequestDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCUUpdateDate__c</fullName>
        <description>LastCUUpdateDate</description>
        <externalDeveloperName>LastCUUpdateDate</externalDeveloperName>
        <label>LastCUUpdateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_grax_xf_user__c</fullName>
        <description>LastModifiedById_grax_xf_user</description>
        <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
        <label>LastModifiedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_Name__c</fullName>
        <description>LastModifiedBy_Name</description>
        <externalDeveloperName>LastModifiedBy_Name</externalDeveloperName>
        <label>LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>LastName</description>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>LastName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <description>LastReferencedDate</description>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>LastReferencedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <description>LastViewedDate</description>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>LastViewedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <description>LeadSource</description>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>LeadSource</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_c__c</fullName>
        <description>Level__c</description>
        <externalDeveloperName>Level__c</externalDeveloperName>
        <label>Level__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingBillingLatitude__c</fullName>
        <description>MailingBillingLatitude</description>
        <externalDeveloperName>MailingBillingLatitude</externalDeveloperName>
        <label>MailingBillingLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingBillingLongitude__c</fullName>
        <description>MailingBillingLongitude</description>
        <externalDeveloperName>MailingBillingLongitude</externalDeveloperName>
        <label>MailingBillingLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <description>MailingCity</description>
        <externalDeveloperName>MailingCity</externalDeveloperName>
        <label>MailingCity</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <description>MailingCountry</description>
        <externalDeveloperName>MailingCountry</externalDeveloperName>
        <label>MailingCountry</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingGeocodeAccuracy__c</fullName>
        <description>MailingGeocodeAccuracy</description>
        <externalDeveloperName>MailingGeocodeAccuracy</externalDeveloperName>
        <label>MailingGeocodeAccuracy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingLatitude__c</fullName>
        <description>MailingLatitude</description>
        <externalDeveloperName>MailingLatitude</externalDeveloperName>
        <label>MailingLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingLongitude__c</fullName>
        <description>MailingLongitude</description>
        <externalDeveloperName>MailingLongitude</externalDeveloperName>
        <label>MailingLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <description>MailingPostalCode</description>
        <externalDeveloperName>MailingPostalCode</externalDeveloperName>
        <label>MailingPostalCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalState__c</fullName>
        <description>MailingPostalState</description>
        <externalDeveloperName>MailingPostalState</externalDeveloperName>
        <label>MailingPostalState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <description>MailingState</description>
        <externalDeveloperName>MailingState</externalDeveloperName>
        <label>MailingState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <description>MailingStreet</description>
        <externalDeveloperName>MailingStreet</externalDeveloperName>
        <label>MailingStreet</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <description>MasterRecordId</description>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>MasterRecordId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MayEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MayEdit</description>
        <externalDeveloperName>MayEdit</externalDeveloperName>
        <label>MayEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <description>MobilePhone</description>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>MobilePhone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_of_Birth_c__c</fullName>
        <description>Month_of_Birth__c</description>
        <externalDeveloperName>Month_of_Birth__c</externalDeveloperName>
        <label>Month_of_Birth__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_c__c</fullName>
        <description>Notes__c</description>
        <externalDeveloperName>Notes__c</externalDeveloperName>
        <label>Notes__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Friends_c__c</fullName>
        <description>Number_of_Friends__c</description>
        <externalDeveloperName>Number_of_Friends__c</externalDeveloperName>
        <label>Number_of_Friends__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Address_in_Google_Maps_c__c</fullName>
        <description>Open_Address_in_Google_Maps__c</description>
        <externalDeveloperName>Open_Address_in_Google_Maps__c</externalDeveloperName>
        <label>Open_Address_in_Google_Maps__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherBillingLatitude__c</fullName>
        <description>OtherBillingLatitude</description>
        <externalDeveloperName>OtherBillingLatitude</externalDeveloperName>
        <label>OtherBillingLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherBillingLongitude__c</fullName>
        <description>OtherBillingLongitude</description>
        <externalDeveloperName>OtherBillingLongitude</externalDeveloperName>
        <label>OtherBillingLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherCity__c</fullName>
        <description>OtherCity</description>
        <externalDeveloperName>OtherCity</externalDeveloperName>
        <label>OtherCity</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCountry__c</fullName>
        <description>OtherCountry</description>
        <externalDeveloperName>OtherCountry</externalDeveloperName>
        <label>OtherCountry</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherGeocodeAccuracy__c</fullName>
        <description>OtherGeocodeAccuracy</description>
        <externalDeveloperName>OtherGeocodeAccuracy</externalDeveloperName>
        <label>OtherGeocodeAccuracy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherLatitude__c</fullName>
        <description>OtherLatitude</description>
        <externalDeveloperName>OtherLatitude</externalDeveloperName>
        <label>OtherLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherLongitude__c</fullName>
        <description>OtherLongitude</description>
        <externalDeveloperName>OtherLongitude</externalDeveloperName>
        <label>OtherLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <description>OtherPhone</description>
        <externalDeveloperName>OtherPhone</externalDeveloperName>
        <label>OtherPhone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPostalCode__c</fullName>
        <description>OtherPostalCode</description>
        <externalDeveloperName>OtherPostalCode</externalDeveloperName>
        <label>OtherPostalCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPostalState__c</fullName>
        <description>OtherPostalState</description>
        <externalDeveloperName>OtherPostalState</externalDeveloperName>
        <label>OtherPostalState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherState__c</fullName>
        <description>OtherState</description>
        <externalDeveloperName>OtherState</externalDeveloperName>
        <label>OtherState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherStreet__c</fullName>
        <description>OtherStreet</description>
        <externalDeveloperName>OtherStreet</externalDeveloperName>
        <label>OtherStreet</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>OwnerId</description>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId_grax_xf_user__c</fullName>
        <description>OwnerId_grax_xf_user</description>
        <externalDeveloperName>OwnerId_grax_xf_user</externalDeveloperName>
        <label>OwnerId_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Owner_Name</description>
        <externalDeveloperName>Owner_Name</externalDeveloperName>
        <label>Owner_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <description>PhotoUrl</description>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>PhotoUrl</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <description>RecordTypeId</description>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>RecordTypeId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId_grax_xf_recordtype__c</fullName>
        <description>RecordTypeId_grax_xf_recordtype</description>
        <externalDeveloperName>RecordTypeId_grax_xf_recordtype</externalDeveloperName>
        <label>RecordTypeId_grax_xf_recordtype</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <description>RecordType_Name</description>
        <externalDeveloperName>RecordType_Name</externalDeveloperName>
        <label>RecordType_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportsToId__c</fullName>
        <description>ReportsToId</description>
        <externalDeveloperName>ReportsToId</externalDeveloperName>
        <label>ReportsToId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportsToId_grax_xf_contact__c</fullName>
        <description>ReportsToId_grax_xf_contact</description>
        <externalDeveloperName>ReportsToId_grax_xf_contact</externalDeveloperName>
        <label>ReportsToId_grax_xf_contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportsToName__c</fullName>
        <description>ReportsToName</description>
        <externalDeveloperName>ReportsToName</externalDeveloperName>
        <label>ReportsToName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportsTo_Name__c</fullName>
        <description>ReportsTo_Name</description>
        <externalDeveloperName>ReportsTo_Name</externalDeveloperName>
        <label>ReportsTo_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_c__c</fullName>
        <description>Role__c</description>
        <externalDeveloperName>Role__c</externalDeveloperName>
        <label>Role__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSP_User_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SSP_User__c</description>
        <externalDeveloperName>SSP_User__c</externalDeveloperName>
        <label>SSP_User__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Customer_ID_c__c</fullName>
        <description>Salesforce_Customer_ID__c</description>
        <externalDeveloperName>Salesforce_Customer_ID__c</externalDeveloperName>
        <label>Salesforce_Customer_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Salutation</description>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>